exercícios feitos até a aula 4

--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula A4 - CursoEmVideo</title>
+    <title>Aula A4 - Exercício 01 - CursoEmVideo</title>
 </head>
 
 <body>
