--- a/aula09/ex005.html
+++ b/aula09/ex005.html
@@ -32,7 +32,7 @@
 
         // com query selector
         var teste = document.querySelector('div#msg') //se usa # porque pega pelo id
-        //var teste = document.querySelector('div.msg') //se usa . quando é classe
+        //var teste = document.querySelector('div.msg') //se usa . quando é classe  (css)
         teste.style.background = 'gray'
     </script>
 </body>
